src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Actual_Spend__c</fullName>
        <defaultValue>00.00</defaultValue>
        <label>Actual Spend (YTD) (M€)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Groups__c</fullName>
        <inlineHelpText>Business Groups which are buying from this supplier</inlineHelpText>
        <label>Business Groups</label>
        <picklist>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A&amp;A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Defined</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Business_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CategoryAreaSIM__c</fullName>
        <inlineHelpText>Category Area wiht highest spend with this supplier</inlineHelpText>
        <label>Category Area</label>
        <picklist>
            <picklistValues>
                <fullName>DELIVERY OPERATIONS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not defined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SERVICES PROCUREMENT OPERATIONS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INDIRECT PROCUREMENT OPERATIONS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRODUCT PROCUREMENT OPERATIONS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CategoryArea__c</fullName>
        <label>Category Area</label>
        <picklist>
            <picklistValues>
                <fullName>Direct Services Procurement (DSP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indirect Procurement (INP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Networks Product Procurement (NPP)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CategoryGroupArea__c</fullName>
        <label>Category Group Area</label>
        <picklist>
            <picklistValues>
                <fullName>Network products procurement</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CategoryGroupSIM__c</fullName>
        <inlineHelpText>Category Group wiht highest spend with this supplier</inlineHelpText>
        <label>Category Group</label>
        <picklist>
            <controllingField>CategoryAreaSIM__c</controllingField>
            <picklistValues>
                <fullName>Business Incubation &amp; e2e Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Care Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronic Manufacturing Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External Workforce Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interconnect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT Procurement &amp; Telecoms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Logistics Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mechanics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NI Materials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEM/ODM/JDM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Optical components</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R&amp;D Subcontracting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semiconductor and RF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subcontracting MS, NPO &amp; SI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subcontracting Other NI Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subcontracting Telecom Implementation Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Testing, Manufacturing &amp; Measurement Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel &amp; Fleet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not defined</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CategoryGroup__c</fullName>
        <label>Category Group</label>
        <picklist>
            <picklistValues>
                <fullName>Antennas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External Workforce Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facility Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IP Transport</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT Hardware and Care Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Logistics Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Managed Services (NO &amp; NPO)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing Services (EMS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mechanics (MEC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NI Installation &amp; Construction Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NI Site Materials &amp; Power Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R&amp;D and IT Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RF Customized Components (RFC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RF Products &amp; Castings (RFP&amp;C)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Software and System Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard &amp; Interconnect Components (STC, INT)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Systems and Embedded Power (SEP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel &amp; Fleet</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <inlineHelpText>Procurement Category with highest spend with this supplier</inlineHelpText>
        <label>Category</label>
        <picklist>
            <controllingField>CategoryGroupSIM__c</controllingField>
            <picklistValues>
                <fullName>Travel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R&amp;D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building investment/CAPEX without Rents and Leases</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facility Management services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rental/Lease/Transactions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Utilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infrastructure Services &amp; Cloud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile Voice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workplace Devices</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Associated Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transport</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warehouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Services Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coaching &amp; Other Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial, Tax &amp; Insurances</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal &amp; Intellectual Property</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing &amp; Communications Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Functional Test Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT Peripheral Devices</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing Auxiliaries and Consumables</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Performance Test Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fleet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Incubation Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Classification__c</fullName>
        <inlineHelpText>Global Class of Supplier. Focus and Strategic suppliers are in scope of Supplier Relationship Management</inlineHelpText>
        <label>Classification</label>
        <picklist>
            <picklistValues>
                <fullName>Focus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supplier Base</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ecovadis_Score__c</fullName>
        <label>Ecovadis Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EnterpriseId__c</fullName>
        <encrypted>true</encrypted>
        <label>EncryptedEnterprise Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enterprise_Id__c</fullName>
        <encrypted>true</encrypted>
        <label>Enterprise  Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Impact__c</fullName>
        <label>Impact</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LE_Spend__c</fullName>
        <defaultValue>00.00</defaultValue>
        <label>LE Spend (YTD) (M€)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LSM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead Supplier Manager</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>Supplier Manager</value>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>System Administrator</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead_Category_Manager1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead Category Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead_Category_Manager__c</fullName>
        <formula>LSM__r.FirstName+&quot; &quot;+LSM__r.LastName</formula>
        <label>Lead Category Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Unit__c</fullName>
        <inlineHelpText>The lead supplier manager&apos;s unit</inlineHelpText>
        <label>Lead Unit</label>
        <picklist>
            <picklistValues>
                <fullName>DO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GSCM AMS PO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IPO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Likelihood__c</fullName>
        <label>Likelihood</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Market_Information__c</fullName>
        <label>Market Information</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Market_Share__c</fullName>
        <label>Market Share</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Model_Description__c</fullName>
        <label>Model Description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>Model</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>News__c</fullName>
        <formula>HYPERLINK(&quot;https://www.google.com/webhp?sourceid=chrome-instant&amp;ion=1&amp;espv=2&amp;ie=UTF-8#q=&quot;
&amp; Unique_Id__c &amp;&quot;&amp;tbm=nws&quot;, &quot;NEWS&quot;)</formula>
        <label>Supplier News</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nokia_Spend_of_Revenue__c</fullName>
        <label>% Nokia Spend of Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Nokia_as_a_Customer__c</fullName>
        <inlineHelpText>Supplier&apos;s view on Nokia as a customer (estimation)</inlineHelpText>
        <label>Supplier View</label>
        <picklist>
            <controllingField>Supplier_Segmentation__c</controllingField>
            <picklistValues>
                <fullName>Core</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Develop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exploit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nuisance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not defined</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Number_of_Employees__c</fullName>
        <label>Number of Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Period_for_RAT__c</fullName>
        <label>Period of Risk Assesment</label>
        <picklist>
            <picklistValues>
                <fullName>Q1,2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q2,2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q3,2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q4,2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q1,2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q2,2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q3,2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q4,2015</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PrimaryContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Remarks_Category_Manager__c</fullName>
        <label>Remarks</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Remarks_Secondary_Category_Manager__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Remarks_Tertiary_Category_Manager__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SAM_Innovation_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supplier Innovation Account Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SGN2__c</fullName>
        <encrypted>true</encrypted>
        <inlineHelpText>Supplier Group Number 2 from fALU</inlineHelpText>
        <label>Supplier Group Number 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SGN_Name__c</fullName>
        <encrypted>true</encrypted>
        <inlineHelpText>Supplier Group Number Name from fALU</inlineHelpText>
        <label>Supplier Group Number  Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SGN__c</fullName>
        <encrypted>true</encrypted>
        <inlineHelpText>Supplier Group Number from fALU</inlineHelpText>
        <label>Supplier Group Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPE_Parent_Account_Check__c</fullName>
        <formula>OR(Parent.Id != Null,Parent.Id != &apos;&apos;)</formula>
        <label>SPE Parent Account Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SPV__c</fullName>
        <inlineHelpText>Index based on Supplier Experience Survey - typically updated once a year</inlineHelpText>
        <label>Supplier Perceived Value(0-100%)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scope__c</fullName>
        <label>Scope</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Category_Area__c</fullName>
        <label>Secondary Category Area</label>
        <picklist>
            <picklistValues>
                <fullName>Indirect Procurement (INP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Procurement (PP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Services Procurement (SP)</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Secondary_Category_Group__c</fullName>
        <label>Secondary Category Group</label>
        <picklist>
            <controllingField>Secondary_Category_Area__c</controllingField>
            <picklistValues>
                <fullName>Facility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT Procurement &amp; Telecoms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Logistics Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R&amp;D Subcontracting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Testing, Manufacturing &amp; Measurement Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel &amp; Fleet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Incubation &amp; e2e Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronic Manufacturing Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interconnect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mechanics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEM/ODM/JDM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Optical components</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semiconductor and RF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Care Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External Workforce Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NI Materials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subcontracting Telecom Implementation Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subcontracting MS, NPO &amp; SI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subcontracting Other NI Services</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Secondary_Category__c</fullName>
        <label>Secondary Category</label>
        <picklist>
            <controllingField>Secondary_Category_Group__c</controllingField>
            <picklistValues>
                <fullName>Building investment/CAPEX without Rents and Leases</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facility Management services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rental/Lease/Transactions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Utilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infrastructure Services &amp; Cloud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile Voice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workplace Devices</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Associated Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transport</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warehouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Services Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coaching &amp; Other Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial, Tax &amp; Insurances</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal &amp; Intellectual Property</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing &amp; Communications Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R&amp;D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Functional Test Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT Peripheral Devices</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing Auxiliaries and Consumables</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Performance Test Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fleet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Incubation Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Single_Source__c</fullName>
        <label>Single Source</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sponsor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Executive Sponsor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SupplierId__c</fullName>
        <label>Supplier Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SupplierManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supplier Manager</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Supplier Manager)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Supplier_Governance_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supplier Governance Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Supplier_News__c</fullName>
        <description>Supplier_News</description>
        <label>Supplier News</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Supplier_Segmentation__c</fullName>
        <inlineHelpText>Supplier Segmentation based on Kraljic Matrix</inlineHelpText>
        <label>Supplier Segmentation</label>
        <picklist>
            <picklistValues>
                <fullName>Strategic Alliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manage Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shop</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Supplier_Type__c</fullName>
        <formula>&apos;Vendor&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Supplier Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Url__c</fullName>
        <label>Supplier Url</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>TPD__c</fullName>
        <label>Total Payable Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tertiary_Category_Area__c</fullName>
        <label>Tertiary Category Area</label>
        <picklist>
            <picklistValues>
                <fullName>Indirect Procurement (INP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Procurement (PP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Services Procurement (SP)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>